# Zed

./: Cargo.toml  LICENSE  README.md  build.rs
cpp/: browsers.cpp  delivery.cpp  discord.cpp  network.cpp  stealer.h  system.cpp  telegram.cpp
payload/: config_template.h  main.cpp
src/: app.rs  ffi.rs  main.rs  runner.rs  state.rs  theme.rs
src/ui/: mod.rs  sidebar.rs  titlebar.rs  widgets.rs
src/ui/pages/: builder.rs  compiler.rs  home.rs  mod.rs  settings.rs
