[package]
name = "zed-stealer"
version = "0.1.0"
edition = "2021"
authors = ["ZED Team"]
description = "ZED Stealer Builder"

[[bin]]
name = "zed-stealer"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.34", features = ["default_fonts", "wgpu"] }
egui = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
